use grid to prevent layout shift

--- a/src/index.css
+++ b/src/index.css
@@ -182,33 +182,34 @@ main {
 }
 
 header {
-	width: 100%;
-	height: 300px;
+	height: 256px;
+	padding: 22px 0;
 
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	display: grid;
+	grid-template-columns: 1.5fr 1fr;
+	grid-template-rows: 1.1fr 1fr;
+	gap: 6px 36px;
+	grid-template-areas:
+		"avatar ."
+		"avatar .";
 }
 
-address {
-	font-style: normal;
-}
-
-address > * {
-	margin: 6px 0;
+header > h1,
+header > id {
 	opacity: 0;
-	display: block;
 }
 
-address > h1 {
+header > h1 {
 	font-size: 26px;
+	margin: 0;
+	align-self: end;
 }
 
-address[loaded] > :first-child {
+header[loaded] > h1 {
 	animation: fromLeft forwards 0.75s cubic-bezier(0.39, 0.575, 0.565, 1);
 }
 
-address[loaded] > :nth-child(2) {
+header[loaded] > id {
 	animation: fromLeft forwards 0.75s cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s;
 }
 
@@ -216,7 +217,8 @@ address[loaded] > :nth-child(2) {
 	border-radius: 50%;
 	border: 1px solid #3c3c3c;
 	opacity: 0;
-	margin: 36px;
+	grid-area: avatar;
+	justify-self: end;
 }
 
 #avatar[loaded] {
